--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
 </head>
 <body>
-  
+<div id="app">
+<main>
+<div class="main-container">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo excepturi voluptas fugiat doloremque, explicabo quis commodi nobis assumenda maiores odio at accusamus nulla cum culpa temporibus? Quod odit quia aspernatur.</div>
+</main>
+
+<aside>
+  <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel repellendus, laborum velit praesentium voluptatem obcaecati molestias quam, voluptatibus magni delectus maxime! Amet dolore commodi modi reprehenderit fugiat eligendi laudantium earum!</div>
+</aside>
+</div>
 </body>
 </html>
