Conteudo aside e conteudo main

--- a/index.html
+++ b/index.html
@@ -15,11 +15,26 @@
 <body>
 <div id="app">
 <main>
-<div class="main-container">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo excepturi voluptas fugiat doloremque, explicabo quis commodi nobis assumenda maiores odio at accusamus nulla cum culpa temporibus? Quod odit quia aspernatur.</div>
+<div class="main-container">
+  <div class="back">
+    <img src="assets/icons/arrow-left-02 (1).svg" alt="ícone de voltar">
+    <span>Voltar</span>
+  </div>
+  <h1>Formulário de matrícula</h1>
+  <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+</div>
 </main>
 
 <aside>
-  <div class="aside-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel repellendus, laborum velit praesentium voluptatem obcaecati molestias quam, voluptatibus magni delectus maxime! Amet dolore commodi modi reprehenderit fugiat eligendi laudantium earum!</div>
+  <div class="aside-container">
+    <header>
+      <img src="assets/logo.svg" alt="Estrelas do Amanhã">
+      <h2>Porque cada momento <br> de <span>aprendizado</span> conta</h2>
+      <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+    </header>
+
+    <img src="assets/Illustration (1).svg" alt="Ilustração de uma professora dando aula">
+  </div>
 </aside>
 </div>
 </body>
